# superbase-python

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_OPTIONS.md  Dockerfile  README.md  claude.md  main.py  railway.json  render.yaml  requirements.txt
.github/: DEPLOYMENT.md  SETUP_SECRETS.md
.github/workflows/: ci.yml  deploy-complete.yml  deploy-supabase.yml  deploy.yml
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/scripts/: test_api.py
backend/src/chatbot/: __init__.py
backend/src/chatbot/application/use_cases/: create_conversation.py  get_conversation.py  get_conversation_messages.py  list_conversations.py  send_message.py
backend/src/chatbot/domain/entities/: __init__.py  conversation.py  user.py
backend/src/chatbot/domain/repositories/: conversation_repository.py
backend/src/chatbot/infrastructure/: config.py
backend/src/chatbot/infrastructure/auth/: supabase_auth.py
backend/src/chatbot/infrastructure/database/: supabase_conversation_repository.py
backend/src/chatbot/infrastructure/supabase/: __init__.py  client.py
backend/src/chatbot/presentation/api/: app.py  routes.py
backend/src/chatbot/presentation/schemas/: message.py
backend/supabase/migrations/: 001_create_conversations_table.sql  002_create_messages_table.sql  004_create_rpc_functions.sql
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx
migrations/: README.md
scripts/: apply_migrations.py
supabase/: config.toml
supabase/migrations/: 001_create_conversations_table.sql  002_create_messages_table.sql  (+1 more)
(+21 files in other folders)
